--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ TinProxyService/Token.txt
 TinProxyService/AllowIpList.txt
 TinProxyService/ApiKeyList.txt
 .git
+HelpTools/__pycache__/ReadCategories.cpython-310.pyc
+HelpTools/__pycache__/ReadCategories.cpython-310.pyc
+TinProxyService/__pycache__/GetProxyIP.cpython-310.pyc
